--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -217,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -238,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -696,7 +702,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -749,21 +757,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/287   train_loss = 8.823\n",
-      "Epoch   3 Batch  139/287   train_loss = 4.706\n",
-      "Epoch   6 Batch  278/287   train_loss = 3.346\n",
-      "Epoch  10 Batch  130/287   train_loss = 2.459\n",
-      "Epoch  13 Batch  269/287   train_loss = 2.019\n",
-      "Epoch  17 Batch  121/287   train_loss = 1.577\n",
-      "Epoch  20 Batch  260/287   train_loss = 1.274\n",
-      "Epoch  24 Batch  112/287   train_loss = 0.831\n",
-      "Epoch  27 Batch  251/287   train_loss = 0.569\n",
-      "Epoch  31 Batch  103/287   train_loss = 0.611\n",
-      "Epoch  34 Batch  242/287   train_loss = 0.430\n",
-      "Epoch  38 Batch   94/287   train_loss = 0.229\n",
-      "Epoch  41 Batch  233/287   train_loss = 0.268\n",
-      "Epoch  45 Batch   85/287   train_loss = 0.204\n",
-      "Epoch  48 Batch  224/287   train_loss = 0.180\n",
+      "Epoch   0 Batch    0/287   train_loss = 8.825\n",
+      "Epoch   3 Batch  139/287   train_loss = 4.666\n",
+      "Epoch   6 Batch  278/287   train_loss = 3.289\n",
+      "Epoch  10 Batch  130/287   train_loss = 2.458\n",
+      "Epoch  13 Batch  269/287   train_loss = 1.876\n",
+      "Epoch  17 Batch  121/287   train_loss = 1.521\n",
+      "Epoch  20 Batch  260/287   train_loss = 1.258\n",
+      "Epoch  24 Batch  112/287   train_loss = 0.688\n",
+      "Epoch  27 Batch  251/287   train_loss = 0.541\n",
+      "Epoch  31 Batch  103/287   train_loss = 0.471\n",
+      "Epoch  34 Batch  242/287   train_loss = 0.355\n",
+      "Epoch  38 Batch   94/287   train_loss = 0.247\n",
+      "Epoch  41 Batch  233/287   train_loss = 0.226\n",
+      "Epoch  45 Batch   85/287   train_loss = 0.175\n",
+      "Epoch  48 Batch  224/287   train_loss = 0.175\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -813,7 +821,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -833,7 +843,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -927,7 +939,7 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return int_to_vocab[np.argmax(probabilities)]\n",
+    "    return np.random.choice(list(int_to_vocab.values()), p=probabilities)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -954,19 +966,17 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from ./save\n",
-      "moe_szyslak:(eyeing homer's ass) oh yeah, that would look so good on me.\n",
-      "\n",
-      "\n",
-      "moe_szyslak:(hostile) hey, you gotta go with marge, i'd like a bottle of henry k. duff's private reserve.\n",
-      "homer_simpson:(tough) okay, i will go.\n",
-      "fat_tony:(realizing) hey, wait a minute-- this is real money!\n",
-      "homer_simpson:(proudly) hey, who invited the hippies?\n",
-      "lisa_simpson: we're getting 50% of the pope's of an...\n",
-      "homer_simpson:(suddenly nervous) uh, i ain't never been in the game a long time.\n",
-      "moe_szyslak: hey homer... and say hi some other way... enjoy... and say, i know... and what about you, moe.\n",
-      "homer_simpson:(to scully) i am not cursed!(calling out) uh, i don't wanna come here.\n",
-      "bart_simpson: just ask your heart what needed to school? you're not the best musical in light years measure distance not time to timbuk-tee\n",
-      "homer_simpson: hey\n"
+      "moe_szyslak: here you go, too?\n",
+      "homer_simpson: sure.\n",
+      "homer_simpson:(derisive snort) hey, you planted that.(to them) i'll see you, i'm gonna be so loud. will you go, clipped to make me do you think. would you and smile. so often i think i'd love to go to the media and get them to say something incriminating(he taps a tape recorder) oh my god!\n",
+      "carl:(to moe) see, you can level with me, and they called that\" the stinger of your sweaty heart.\n",
+      "lenny: turns out, on skinner. from now on, mouse is the big deal of the dead!(looks around, huh?\n",
+      "homer_simpson:(confused) what the little rat, when i wish i was too drunk.\n",
+      "homer_simpson:(morose)\n",
+      "homer_simpson:(panicky) or am i was a good drink.\n",
+      "homer_simpson:(gasps) you little scum-sucking pus-bucket. when i get youse?\n",
+      "moe_szyslak:(proudly) youuu got that right, my friend!\n",
+      "\n"
      ]
     }
    ],
